frontend/src/style/styles.scss
$body-bg: #fafafa;
$input-focus-border-color: #f49700;
$input-focus-box-shadow: unset;
$form-select-focus-box-shadow: unset;
$enable-negative-margins: true;

$theme-colors: (
  'primary': #f49700,
  'success': #28a745,
  'secondary': #ededed,
  'danger': #dc3545,
  'black': #444444,
  'green': #8EA604,
  'red': #DF2935,
  'grey': #666666,
  'light-grey': #CACACA,
  'white': #FFFFFF,
);

$container-max-widths: (
        sm: 540px,
        md: 720px,
        lg: 960px
);

@import "~bootstrap/scss/bootstrap";
@import "layout";
@import "animations";

a {
  color: unset !important;
  text-decoration: none !important;
}

.hover-darken:hover {
  background-color: #0001;
}

.card {
  background-color: #ededed;
}

.img {
  background-color: white;
  border-radius: 4em;
}

.card img {
  width: 100px;
  margin: auto;
  padding: 0.5em;
  border-radius: 0.7em;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
}

.centered-rectangle {
  background-color: white;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 2em;
}

.search {
  border-radius: 0;
  border: none;
}

.bg-tint-red {
  background: #f002 !important;
}

.bg-tint-primary {
  background: #f903 !important;
}

.bg-tint-secondary {
  background: #1112 !important;
}

/* hide number input arrows */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

